pkg/ibmvpc/examples/out/explain_out/SGInternal3SrcToExternalGroup_all_vpcs_explain_detail.txt
Explaining connectivity from 10.240.30.4/24 to 161.26.0.0/8 within test-vpc1-ky
Interpreted source: vsi3a-ky[10.240.30.5], vsi3b-ky[10.240.30.4], db-endpoint-gateway-ky[10.240.30.6]
Interpreted destination: 161.26.0.0/8 (external)
===============================================================================

No connections from db-endpoint-gateway-ky[10.240.30.6] to Public Internet 161.0.0.0/8;
	connection is blocked because there is no resource for external connectivity

Egress: security group sg3-ky allows connection; network ACL acl3-ky allows connection

Path:
	db-endpoint-gateway-ky[10.240.30.6] -> security group sg3-ky -> network ACL acl3-ky -> subnet subnet3-ky -> 
	| no resource for external connectivity |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg3-ky allows connection with the following allow rules
			direction: outbound, id: id:125, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: all
			direction: outbound, id: id:125, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: outbound, id: id:125, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 100-200
		network ACL acl3-ky allows connection with the following allow rules
			direction: outbound, name: outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

------------------------------------------------------------------------------------------------------------------------

No connections from vsi3a-ky[10.240.30.5] to Public Internet 161.0.0.0/8;
	connection is blocked because there is no resource for external connectivity

Egress: security group sg3-ky allows connection; network ACL acl3-ky allows connection

Path:
	vsi3a-ky[10.240.30.5] -> security group sg3-ky -> network ACL acl3-ky -> subnet subnet3-ky -> 
	| no resource for external connectivity |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg3-ky allows connection with the following allow rules
			direction: outbound, id: id:125, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: all
			direction: outbound, id: id:125, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: outbound, id: id:125, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 100-200
		network ACL acl3-ky allows connection with the following allow rules
			direction: outbound, name: outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

------------------------------------------------------------------------------------------------------------------------

No connections from vsi3b-ky[10.240.30.4] to Public Internet 161.0.0.0/8;
	connection is blocked at egress and because there is no resource for external connectivity

Egress: security group sg2-ky does not allow connection; network ACL acl3-ky allows connection

Path:
	vsi3b-ky[10.240.30.4] -> | security group sg2-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg2-ky has no relevant allow rules
		network ACL acl3-ky allows connection with the following allow rules
			direction: outbound, name: outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

------------------------------------------------------------------------------------------------------------------------
